[tool.poetry]
name = "policrim"
version = "0.1.0"
description = ""
authors = ["Rory Byrne <rory@rory.bio>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scikit-learn = "^1.5.0"
nltk = "^3.8.1"
pandas = "^2.2.2"
pydantic = "^2.7.2"
jupyterlab = "^4.2.1"
matplotlib = "^3.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
